# minimal-generator

./: .bash_history  EireneCode.jl  README.md  Sociology_concept_indices.csv  UniformAndLengthOptimalCycles.jl  computePH.jl  edge-loss.jl  exampleRun.jl  find_sub_bdr_matrix.jl  implementComputeHomology.jl  installRequirements.jl  outputFunctions.jl  pilotRun.jl  rebuild_boundary_matrix.jl  triangle-loss.jl  uniform_length_weighted_minimal_cycles.jl  utilFunctions.jl  volume_optimal_cycles.jl
.Trash/: main.tex  notes.txt  optimal_representatives  optimal_representatives 14-20-25-468  optimal_representatives 16-43-58-858  optimal_representatives 17-53-37-380  optimal_representatives.d  utilFunctions.jl
.Trash/formatting_stuff/: frontiers_SupplementaryMaterial.tex  old1.tex
.Trash/input/: boundaryexample.tex
.Trash/manuscript_rr_notes/: ReviewsandComments.tex  manuscript_rr_notes.txt
.Trash/manuscript_sections/: 02authors.tex  03authorformat.tex  05introduction.tex  07-1RelatedWork.tex  07-2Methods.tex  09results.tex  10discussion.tex  12-pic-MIP-LP.tex  12-pic-areaExample.tex  12-pic-differentoptimalgens.tex  12-pic-edgebreakdown.tex  12-pic-effectiveness.tex  12-pic-gregExample.tex  12-pic-homology-class-vs-basis.tex  12-pic-homolougous.tex  12-pic-twodisks.tex  12-pic-volexample.tex  12-table-distribution.tex  (+1 more)
.bash_sessions/: CEB24832-9BC8-452E-9AC3-3952079B9CAF.history  CEB24832-9BC8-452E-9AC3-3952079B9CAF.historynew
Downloads/optimal_reps-main/: .gitignore  Cargo.toml  LICENSE  README.md  main
Downloads/optimal_reps-main/src/: 2main.rs  main.rs  vol.rs
(+560 files in other folders)
